# Brainfuck-mlir

./: .gitignore  CMakeLists.txt  README.md
brainfuck-mlir/: CMakeLists.txt  braincc.cc
brainfuck-mlir/include/: CMakeLists.txt
brainfuck-mlir/include/brainfuck/: BrainfuckAttributes.td  BrainfuckDialect.h  BrainfuckDialect.td  BrainfuckOps.h  BrainfuckOps.td  BrainfuckTypeInterfaces.h  BrainfuckTypeInterfaces.td  BrainfuckTypes.h  BrainfuckTypes.td  CMakeLists.txt
brainfuck-mlir/lib/brainfuck/: BrainfuckDialect.cc  BrainfuckOps.cc  CMakeLists.txt
brainfuck-mlir/test/: add.bf  add.mlir
brainfuck-mlir/tools/: CMakeLists.txt  brainfuck-lsp-server.cc
toy/: CMakeLists.txt
toy/Ch7/: toyc.cpp
toy/Ch7/include/toy/: Ops.td  Parser.h
toy/Ch7/mlir/: Dialect.cpp  LowerToAffineLoops.cpp  MLIRGen.cpp  ToyCombine.cpp  ToyCombine.td
toy/tests/: a.mlir  a.toy
